# EMMM2

./: .env.example  .gitattributes  .gitignore  .prettierignore  AGENT.md  Any files or folders placed in the template folder are available via New+.txt  README.md  audit.json  audit_db.py  audit_results.txt  check_db.js  check_i18n.py  clear_db.py  debug_gimi.js  diff.txt  diff_query.txt  eslint.config.js  eslint.json  eslint_errors.txt  fix_nodes.py  i18next.config.ts  implementation_plan.md  index.html  lint_log.txt  lint_output.txt  opencode.json  package.json  patch_imports.cjs  pnpm-lock.yaml  src_test_output.txt  src_test_output2.txt  test_debug.txt  test_output.txt  test_result.txt  test_results2.txt  tsc.txt  tsc_current_errors.txt  tsc_errors.txt  tsc_errors_v2.txt  tsc_output.txt  (+4 more)
src-tauri/: Cargo.toml  build.rs  build_err.txt  build_errors.txt  cargo_output.txt  check.txt  check_err.txt  check_errors.txt  check_log.txt  clippy_log.txt  common-controls-v6.rc  compile_err.txt  compile_errors.txt  error.txt  object_cmds_tests.long-type-13353215931899767285.txt  tauri.conf.json  test.rs  test_errors.txt  test_out.txt  test_out2.txt  test_out3.txt  test_out4.txt  test_output.txt  test_results.txt  test_run.txt  test_run_final.txt  test_run_final2.txt  test_run_final3.txt  test_run_final4.txt  test_run_final5.txt  tests_output.txt
src-tauri/.sqlx/: query-0255c491c4ede2b70897f81ef261ac531b8e898aa44e62865905b60dc96a8d7e.json  query-0cc645028f61041e2e5eb60630787b8e49529aed5f14cef8dfded16d43cf67ef.json  query-0d4595833278b6cfa48074bcb5c0a2068121c8c48e68909b0c0fd512efc5f57f.json  query-19901891e024669f7eddef580f672f9c9f4aaf1180ec1c7d4645841d44a86a22.json  query-1b17425b2232af60fb066deb1c28f229d21106ae0a74b2e2b2e6c4beece7e79d.json  query-1ddfb389de9a68f866903ce9ad16b37838f8b6f1daa2c4697b7be4c425fed721.json  query-2564c54a63e0267fcd5ac5b7873dfbbf5d5833595fbb0663b082dcbda2b22b6d.json  query-28b6c97a97131026d4179d27c159676d725a7f6a04e1e50fb31919ec0b38cddf.json  query-2a9c8e572bcd9f57a1424e590a35d2761f81bf097296d4aa7517a6a7f7e829ef.json  query-2c19bae8744e4a355463ffd258228bd1f060ad20508bcb8e9ca420f0675ca7d7.json  query-352dac5faba6464daf54e0a5fc8605695894818a66cc60fb3fbbb6107a252b27.json  query-4cc5f87b5d98a273822bb07be871a4bb800df001f675c1207b69e21cddb0afd3.json  query-4e00270c5399feafdca15cdb407d5ecc20cbeded8be556ffaaf5a3201de67fa5.json  query-54f77269ef237eecf2cee430c2d8fbf1acc48c7bcdbad8e89e451efd50c59c09.json  query-56ec24223eaf4978db57741099fb28245760d9492231c3a56eaa6e10220a8356.json  query-57054e3f71072f0f2edd46316152167258e5feb04123145ba4d72259fc56b7a1.json  query-64ca1a2fb8d708c3de2f0bd82fdc93b1592b08ab724a4747e4b1bf4c44eb8617.json  query-68298b99d8fa2da998febc2273936c2aaf6670338104184762d8acee01fbaf3e.json  query-6d16c8b22e98cbefbd25521965e0f5e41262bc4b55fad3c0b04342028dfaca0f.json  query-7bef04383bc66e470f0c1ec640cb98b3601c1ab9ca5c2a29f750271485623c63.json  query-7f921b968b516a184b304bb8f5bff97666badc15654bac05e920ffa73b1506cc.json  query-85c712ceb5b3f65000f3c2d4f56bd3066e817504fa5a6c0d4a2922d12341c04b.json  query-87e6bf8e215a3bab22bbdec1a29130041254d9f032c469404588bf96ff9c2ae4.json  query-9800d2c6b28c4054ee62e8cf4da8e94ca34eb155ce928d6cdc02b046989e1b20.json  query-9940d43f9a9553fe2e73451918893ad02876636dcd928688a65e67b021a35408.json  query-ad8386f4575001d2ceeb87e72d6df20e8f9b51d3d86c89efa421f676bae4bc78.json  query-b37d4991c17acea67b246c887ca824050ac58cea7bac85775139f5056f69ea75.json  query-b3ad99bd69444c6e096a8effebc1cfdc8eda3dd9cc45a81ad1e53d03baa4e03f.json  query-b82c8507b0a2225892e55b43831de1d03fa55b8ed44171fa249b318e8aebf3df.json  query-bb1b9dac4b813428b77584fd019489594276b769e97ecc999259f1993e499a94.json  query-be0997620971d667da90c83915e9020baea61a98f4ee5d3a3245cb7bad8fa5af.json  query-bf22be78f92ae87543a23c28259b97fce44c52fd94b845160f18dec607daed39.json  query-c4a5d49a459720c08cccd9afb3a8d1b52c2867af078b8f2fec09e5de18371bf4.json  query-c8690b6975e696703cbd5b55c10b410fc3d2958f5aee48d3144847be489cd00c.json  query-cbe64eb4fe75e7aad23479d8e2b4c0e1d0d37a77cdbca4c11816bd2028a07977.json  query-cc57ad3fb1739df60578081a9c4adf1cfb3c78a154fcb32d5fdb6aeaf3f0cbe5.json  query-d85d71f1e4c34108b815ef523d63321eee2a3796d7c7a8e651327c435c4ca99a.json  query-dbb8382f152425548fa788cb9d1dedb3fedcab1575c0c5224be41f01fc955a7e.json  query-df72142150f3474ee794c69df457021a0b92e2e848683e77f80718ad6a71b212.json  query-e5fce64e826165c590fa02956471ae9d491a6a6213c947737d86798c73270b03.json  (+1 more)
src-tauri/capabilities/: default.json  manager.json
src-tauri/migrations/: 001_baseline_schema.sql  001_init.sql  002_epic1_fixes.sql  002_keyviewer_browser.sql  003_epic2_scanner.sql  003_indexes_and_triggers.sql  004_add_disabled_reason.sql  004_epic3_objects.sql  005_corridor_state.sql  005_epic4_explorer.sql  006_collection_object_states.sql  006_objects_pin.sql  007_drop_trash_log.sql  007_unicode_keys.sql  008_add_favorite_column.sql  008_mod_corridor_source.sql  009_collection_runtime_snapshot.sql  010_canonical_runtime_snapshots.sql  (+26 more)
(+1630 files in other folders)
