[package]
name = "emmm"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "emmm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug_matcher = []

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "emmm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
embed-resource = "3.0.7"
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools", "unstable"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1.19"
tauri-plugin-log = "2"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "json"] }
sqlx-macros = { version = "0.8", default-features = false, features = ["sqlite"] }
tokio = { version = "1", features = ["full"] }
tauri-plugin-dialog = "2"
uuid = { version = "1.22.0", features = ["v4"] }
thiserror = "2.0.18"
anyhow = "1.0.101"
log = "0.4.29"
chrono = "0.4"
specta = { version = "=2.0.0-rc.22", features = ["serde_json"] }
specta-typescript = "=0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }


# Epic 2: Scanner Core
walkdir = "2"
regex = "1"
deunicode = "1"
strsim = "0.11"
blake3 = "1"
rayon = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }

# Epic 2: Archive & File Ops
notify = "7"
zip = { version = "2", features = ["aes-crypto"] }
sevenz-rust = { version = "0.6", features = ["aes256"] }
rar = "0.4"
tempfile = "3"
lru = "0.16.3"
sanitize-filename = "0.6.0"
argon2 = "0.5"
sha2 = "0.10"
rand = "0.8"
sysinfo = "0.33"
reqwest = { version = "0.13.2", features = ["blocking", "json", "stream"] }
fs_extra = "1.3.0"
dotenvy = "0.15.7"
urlencoding = "2.1.3"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2"
encoding_rs = "0.8.35"
tauri-plugin-global-shortcut = "2"
futures-util = "0.3.32"
enigo = "0.6"
mime_guess = "2.0.4"

[dev-dependencies]
env_logger = "0.11.9"
filetime = "0.2.27"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-native-tls", "sqlite", "migrate", "macros", "json"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging", "Win32_System_RestartManager"] }


[patch.crates-io]
# Patches removed as they were ignored due to version incompatibility with transitive consumers.
# Upstream updates in Tauri will be required to fully modernize these.
